SLING-10037: jdk11 level build support